--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
                     <option value="adultes">Adultes</option>
                 </select>
                 <label for="question">Question :</label>
-                <input type="text" id="question" name="question">
+                <input type="text" id="question" name="question" required>
                 <label for="options">Nombre de propositions :</label>
                 <select id="options" name="options">
                     <option value="2">2</option>
